App3/pyappflasktest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyappflasktest
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "50%"
      maxUnavailable: "50%"
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: pyappflasktest
  template:
    metadata:
      labels:
        app: pyappflasktest
    spec:
      containers:
      - image: roanfranklin/pyappflasktest:latest
        name: pyappflasktest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
