App3/racingcaranimation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: racingcaranimation
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "50%"
      maxUnavailable: "50%"
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: racingcaranimation
  template:
    metadata:
      labels:
        app: racingcaranimation
    spec:
      containers:
      - image: roanfranklin/racingcaranimation:latest
        name: racingcaranimation
        ports:
        - containerPort: 80
