App3/pyappflasktest-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyappflasktest
  namespace: apps
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: pyappflasktest
